--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-h1{
+/* h1{
     font-size: 30px;
     text-align: center;
     color: #016fff
@@ -13,4 +13,4 @@ h1{
     
     body {
     background-color: #000000;
-    }
+    } */
