--- a/style.css
+++ b/style.css
@@ -37,6 +37,13 @@ nav ul li {
 	cursor: pointer;
 	border-bottom: 1px solid #fff;
 }
+
+nav ul li img{
+	width: 40px;
+	height: 40px;
+	border-radius: 50%;
+}
+
 nav ul li:hover {
 	border-bottom-color: #000;
 }
