--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ nav .profile h1 {
 nav ul {
 	display: flex;
 	list-style-type: none;
+    align-items: center;
 }
 nav ul li {
 	margin-left: 20px;
