--- a/style.css
+++ b/style.css
@@ -32,17 +32,21 @@ nav ul {
 	display: flex;
 	list-style-type: none;
     align-items: center;
+    
 }
 nav ul li {
 	margin-left: 20px;
 	cursor: pointer;
 	border-bottom: 1px solid #fff;
+    
 }
 
 nav ul li img{
 	width: 40px;
 	height: 40px;
-	border-radius: 50%;
+    margin-top: 5px;
+    
+    
 }
 
 nav ul li:hover {
