--- a/style.css
+++ b/style.css
@@ -16,6 +16,14 @@ a:focus { text-decoration: underline dotted white; color:black; }
 a:hover, a:active { text-decoration: underline dotted white; color:black; }
 a:link { text-decoration: underline dotted white; color:black; }
 
+h4 {
+	text-align: center;
+
+
+}
+
+
+
 
 body {
 	font-family: 'Noto Sans JP', sans-serif;
@@ -146,15 +154,16 @@ nav ul li:hover {
 }
 .page-content .projects-section .project {
 	margin-right: 20px;
-	max-width: 195px;
+	max-width: 14%;
+
+
 }
 
 /* attempt to adapt an image on projects */
 .page-content .projects-section .project img {
 	position: relative;
 	text-align: center;
-	color: white;
-	width: 200px;
+	width: 100%;
 	height: 200px;
     margin-top: 5px;
 }
@@ -176,7 +185,7 @@ footer {
 	flex-wrap: wrap;
 	justify-content: space-around;
 	padding: 10px;
-	background-color: #000;
+	background-color: rgb(255, 255, 255);
 	color: white;
 }
 footer .colonne p {
@@ -203,9 +212,7 @@ footer .colonne p:hover {
 	.page-content .projects-section {
 		margin-top: 15%;
 	}
-	.page-content .projects-section h1 {
-		font-size: 1.5em;
-	}
+
 	.page-content .projects-section .project {
 		margin-right: 0;
 		margin-bottom: 20px;
