--- a/30-01-2022.css
+++ b/30-01-2022.css
@@ -1,7 +1,32 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;400&family=Oswald:wght@300&display=swap');
 
 
+* {
+	margin: 0;
+	padding: 0;
+  }
 
+
+.presentation {
+
+	background-color: rgb(196, 230, 225);
+	width: 100%;
+	height: 800px;
+}
+
+.presentation h1{
+	line-height: 300px;
+	height: 200px;
+	text-align: center;
+}
+
+.presentation img{
+	width: 200px;
+	height: 200px;
+	border-radius: 50%;
+	margin-left: 30%;
+	position:relative;
+}
 
 html {
 	scroll-behavior: smooth;
@@ -34,11 +59,11 @@ h4 {
 
 body {
 	font-family: 'Noto Sans JP', sans-serif;
-	padding: 0 2%;
-	margin: 0;
+
 }
 
 nav {
+	padding: 0 2%;
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: space-between;
@@ -162,12 +187,9 @@ nav ul li:hover {
 .page-content .projects-section .project {
 	margin-right: 20px;
 	max-width: 14%;
-}
 
-.project:hover img {
-	opacity: 0.3;
-}
 
+}
 
 /* attempt to adapt an image on projects */
 .page-content .projects-section .project img {
