--- a/style.css
+++ b/style.css
@@ -1,9 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;400&family=Oswald:wght@300&display=swap');
 
+* {
+	margin: 0;
+	padding: 0;
+  }
 
-
-
-html {
+  html {
 	scroll-behavior: smooth;
   }
 
@@ -34,19 +36,27 @@ h4 {
 
 body {
 	font-family: 'Noto Sans JP', sans-serif;
-	padding: 0 2%;
 	margin: 0;
 }
 
-nav {
+
+/* Navigation Bar */
+/* Navigation Bar */
+/* Navigation Bar */
+/* Navigation Bar */
+/* Navigation Bar */
+
+  nav {
+	padding: 0 2%;
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: space-between;
 	align-items: center;
-	background-color: white;
+	background-color: #ffffff;
 	position: sticky;
 	z-index: 1;
 	top: 0;
+	height: 60px;
 }
 nav .profile {
 	display: flex;
@@ -58,8 +68,7 @@ nav .profile img {
 	border-radius: 50%;
 }
 nav .profile h1 {
-	margin-left: 10px;
-	font-size: 15px;
+	font-size: 20px;
 }
 nav ul {
 	display: flex;
@@ -70,7 +79,7 @@ nav ul {
 nav ul li {
 	margin-left: 20px;
 	cursor: pointer;
-	border-bottom: 1px solid #fff;
+	
 
 }
 
@@ -83,11 +92,74 @@ nav ul li img{
 }
 
 nav ul li:hover {
-	border-bottom-color: #000;
+	border-bottom: 3px solid #97C1A9;
+	margin-bottom: -3px;
+}  
+
+
+/* Navigation Bar */
+/* Navigation Bar */
+/* Navigation Bar */
+/* Navigation Bar */
+/* Navigation Bar */
+
+
+
+
+
+
+
+/* Presentation div */
+/* Presentation div */
+/* Presentation div */
+/* Presentation div */
+/* Presentation div */
+
+.presentation {
+
+	background-color: #D4F0F0;
+	width: 100%;
+	height: 700px;
+	position: relative;
 }
 
+.presentation h1{
+	line-height: 300px;
+	height: 200px;
+	text-align: center;
+	font-family: 'Oswald', sans-serif;
+	text-transform: uppercase;
+	font-size: 3vw;
+}
+
+.presentation img{
+	width: 200px;
+	height: 200px;
+	border-radius: 50%;
+	margin-left: 30%;
+	margin-top: 50px;
+	position:absolute;
+}
+
+.presentation p{
+
+	width: 200px;
+	margin-left: 50%;
+	margin-top: 50px;
+	position:absolute;
+
+}
+
+/* Presentation div */
+/* Presentation div */
+/* Presentation div */
+/* Presentation div */
+/* Presentation div */
+
+
+
 .page-content {
-	margin: 4%;
+	background-color: #ffffff;
 }
 .page-content header {
 	margin-top: 5%;
@@ -148,7 +220,7 @@ nav ul li:hover {
 }
 
 .page-content .projects-section {
-	margin-top: 6%;
+
 }
 .page-content .projects-section h1 {
 	font-family: 'Oswald', sans-serif;
