--- a/style.css
+++ b/style.css
@@ -225,7 +225,6 @@ nav ul li:hover {
 
 .page-content .projects-section .project h4 {
 	color:white;
-	text-align: justify;
 	text-align: center;
 	position: absolute;
 	top: 50%;
@@ -273,7 +272,6 @@ nav ul li:hover {
 
 .page-content .projects-section .project .card_description p {
 	color:white;
-	text-align: justify;
 	text-align: center;
 	position: absolute;
 	top: 50%;
@@ -290,6 +288,26 @@ nav ul li:hover {
 /* page-content section */
 /* page-content section */
 
+
+
+/* footer */
+/* footer */
+/* footer */
+/* footer */
+/* footer */
+
+footer {
+	margin-top: 100px;
+	background-color: #F6F7FB;
+	width:100%;
+	height: 100px;
+}
+
+/* footer */
+/* footer */
+/* footer */
+/* footer */
+/* footer */
 
 @media screen and (max-width: 700px) {
 	nav {
