--- a/style.css
+++ b/style.css
@@ -54,8 +54,8 @@ nav {
 }
 
 nav img {
-	width: 45px;
-	height: 45px;
+	width: 42px;
+	height: 42px;
     margin-top: 5px;   
 	border-bottom: 0px solid #A7D9C9;
 }
@@ -67,12 +67,6 @@ nav img:hover {
 nav .profile {
 	display: flex;
 	align-items: center;
-}
-
-nav .profile img {
-	width: 40px;
-	height: 40px;
-	border-radius: 50%;
 }
 
 nav .profile h1 {
@@ -204,7 +198,7 @@ nav ul li:hover {
 
 .page-content h2 {
 	text-align: center;
-	margin-top: 30px;
+	margin-top: 50px;
 }
 
 .page-content .projects-section .projects {
@@ -216,7 +210,7 @@ nav ul li:hover {
 
 	width: 14%;
 	margin: 0 auto;
-	border: 3px solid #000000;
+	border: 1px solid #000000;
 	background-color: #A7D9C9;
 	height: 300px;
 	border-radius: 5%;
@@ -257,7 +251,7 @@ nav ul li:hover {
 .page-content .projects-section .project .card_description {
 	width: 100%;
 	text-align: center;
-	background-color: #A7D9C9;
+	background-color: #F6F7FB;
 	border-radius: 5%;
 	height: 100%;
 	position:relative;
@@ -271,7 +265,7 @@ nav ul li:hover {
 }
 
 .page-content .projects-section .project .card_description p {
-	color:white;
+	color:black;
 	text-align: center;
 	position: absolute;
 	top: 50%;
@@ -341,6 +335,10 @@ footer {
 		width: 80%;
 	}
 }
+
+
+
+
 
 
 
