--- a/style.css
+++ b/style.css
@@ -207,13 +207,20 @@ nav ul li:hover {
 }
 
 .page-content .projects-section .project {
-
+	
 	width: 14%;
 	margin: 0 auto;
 	border: 1px solid #000000;
 	background-color: #A7D9C9;
 	height: 300px;
 	border-radius: 5%;
+	
+}
+
+.page-content .projects-section .project:hover {
+	
+	border: 1px solid #F6F7FB;
+	transition: 0.7s;
 	
 }
 
@@ -342,7 +349,47 @@ footer {
 
 
 
+/* project_area div */
+/* project_area div */
+/* project_area div */
+/* project_area div */
+/* project_area div */
 
+.project_area {
+
+	background-color: #F6F7FB;
+	width: 100%;
+	height: 700px;
+	
+}
+
+.project_area h1 {
+	line-height: 300px;
+	height: 200px;
+	font-family: 'Oswald', sans-serif;
+	text-transform: uppercase;
+	font-size: 3vw;
+	text-align: center;
+}
+
+.project_area .box{
+
+	width: 60%;
+	position:relative;
+    margin: 0 auto;
+	background-color: lawngreen;
+}
+
+.project_area p {
+
+	text-align: center;
+}
+
+/* project_area div */
+/* project_area div */
+/* project_area div */
+/* project_area div */
+/* project_area div */
 
 
 
