--- a/style.css
+++ b/style.css
@@ -42,11 +42,11 @@ nav ul li:hover {
 }  
 
 .presentation_area {
-	background-color: #8AAAE5;
+	background-color: #87ceeb;
 }
 
 nav {
-	background-color: #ffffff;
+
 }
 
 .page-content {
@@ -105,7 +105,6 @@ footer {
 /* Navigation Bar */
 
 nav {
-	padding: 0 2%;
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: space-between;
@@ -116,14 +115,14 @@ nav {
 	height: 60px;
 }
 
-nav img {
+nav ul img {
 	width: 42px;
 	height: 42px;
     margin-top: 5px;   
 	border-bottom: 0px solid #A7D9C9;
 }
 
-nav img:hover {
+nav ul img:hover {
 	opacity: 0,3;
 }
 
@@ -140,16 +139,40 @@ nav ul {
 	display: flex;
 	list-style-type: none;
     align-items: center;  
+	padding: 0 2%;
 }
 nav ul li {
 	margin-left: 20px;
 	cursor: pointer;
+	
 }
 
 
 nav ul li:hover {
 	margin-bottom: -3px;
-}  
+} 
+
+nav .profile {
+	padding: 0 2%;
+}
+
+nav .nav_container {
+	position: absolute;
+	text-align: center;
+}
+
+nav .nav_container .profile {
+	position: fixed;
+	top: 8px;
+	left: 0px;
+}
+
+nav .nav_container ul {
+	position: fixed;
+	top: 8px;
+	right: 0px;
+}
+
 
 
 /* Navigation Bar */
