--- a/style.css
+++ b/style.css
@@ -193,10 +193,11 @@ nav .nav_container ul {
 /* presentation_area div */
 /* presentation_area div */
 
+
 .presentation_area {
 
 	width: 100%;
-	height: 700px;
+	height: 500px;
 	
 }
 
@@ -208,6 +209,21 @@ nav .nav_container ul {
 	font-size: 3vw;
 	text-align: center;
 }
+
+
+h5{
+	line-height: 90px;
+	font-family: 'Oswald', sans-serif;
+	text-transform: uppercase;
+	font-size: 3vw;
+	text-align: center;
+	position:sticky;
+	z-index:100;
+	top:0;
+	width: 500px;
+	margin: 0 auto;
+}
+
 
 /* box div */
 /* box div */
@@ -221,6 +237,7 @@ nav .nav_container ul {
 	height: 400px;
 	position:relative;
     margin: 0 auto;
+	top: 50px;
 }
 
 .presentation_area .box img{
@@ -276,7 +293,7 @@ nav .nav_container ul {
 	font-family: 'Oswald', sans-serif;
 	font-size: 3vw;
 	text-align: center;
-	margin-top: 50px;
+	margin-top: 100px;
 }
 
 .page-content h2 {
