--- a/_includes/nav_bar.html
+++ b/_includes/nav_bar.html
@@ -12,7 +12,7 @@
         <li><a href="https://github.com/BerengerQueune">
             <img src="images/github_logo.png" alt="Github Profile" />
         </a></li>
-        <li><a href="#about_me">About me</a></li>
+        <li><a href="https://berengerqueune.github.io/index.html#about_me">About me</a></li>
         <li><a href="#my_projects">Portfolio</a></li>
         
     </ul>
