--- a/_includes/nav_bar.html
+++ b/_includes/nav_bar.html
@@ -1,3 +1,6 @@
+<h5>Hi, I'm Bérenger</h5>
+<p id="about_me"></p>
+
 <nav>
     <img src="images/cloud_nav_bar.png"/>
     <div class="nav_container">
