--- a/_includes/projects_area.html
+++ b/_includes/projects_area.html
@@ -10,7 +10,7 @@
 				<div class="projects">
 
 					<!--Card 1-->
-                        <div class = "project" onclick="window.open('tableau_project.html','mywindow');" style="cursor: pointer;">
+                        <div class = "project" onclick="window.open('tableau_project.html','_self');" style="cursor: pointer;">
                             <div class = "card_title">
                                 <h4>Mockup project: Dashboard on Tableau from SQL Query</h4>
                             </div>
@@ -21,7 +21,7 @@
 					</div>
 
                     <!--Card 2-->
-					<div class = "project" onclick="window.open('movie_recommendation_project.html','mywindow');" style="cursor: pointer;">
+					<div class = "project" onclick="window.open('movie_recommendation_project.html','_self');" style="cursor: pointer;">
 						<div class = "card_title">
                             <h4>Movie recommendation system</h4>
                         </div>
@@ -31,7 +31,7 @@
 					</div>
 
                     <!--Card 3-->
-                    <div class = "project" onclick="window.open('music_project.html','mywindow');" style="cursor: pointer;">
+                    <div class = "project" onclick="window.open('music_project.html','_self');" style="cursor: pointer;">
 						<div class = "card_title">
                             <h4>Determine music track popularity</h4>
                         </div>
@@ -50,7 +50,7 @@
                 <div class="projects">
 
                     <!--Card 4-->
-                    <div class = "project" onclick="window.open('digitecpharma_project.html','mywindow');" style="cursor: pointer;">
+                    <div class = "project" onclick="window.open('digitecpharma_project.html','_self');" style="cursor: pointer;">
 						<div class = "card_title">
                             <h4>Digitecpharma: dashboards on Metabase</h4>
                         </div>
@@ -60,7 +60,7 @@
 					</div>
 
                     <!--Card 5-->
-                    <div class = "project" onclick="window.open('manomano_project.html','mywindow');" style="cursor: pointer;">
+                    <div class = "project" onclick="window.open('manomano_project.html','_self');" style="cursor: pointer;">
                         <div class = "card_title">
                             <h4>ManoMano: raise customer's engagement</h4>
                         </div>
@@ -70,7 +70,7 @@
                     </div>
 
                     <!--Card 6-->
-                    <div class = "project" onclick="window.open('wild_code_school_project.html','mywindow');" style="cursor: pointer;">
+                    <div class = "project" onclick="window.open('wild_code_school_project.html','_self');" style="cursor: pointer;">
                         <div class = "card_title">
                             <h4>Data Analyst training (Python, Pandas...)</h4>
                         </div>
@@ -88,7 +88,7 @@
 				<div class="projects">
 
 					<!--Card 1-->
-                        <div class = "project" onclick="window.open('future_project.html','mywindow');" style="cursor: pointer;">
+                        <div class = "project" onclick="window.open('future_project.html','_self');" style="cursor: pointer;">
                             <div class = "card_title">
                                 <h4>Future project at Jedha Bootcamp</h4>
                             </div>
