--- a/_includes/projects_area.html
+++ b/_includes/projects_area.html
@@ -12,7 +12,7 @@
 					<!--Card 1-->
                         <div class = "project" onclick="window.open('tableau_project.html','_self');" style="cursor: pointer;">
                             <div class = "card_title">
-                                <h4>Mockup project: Dashboard on Tableau from SQL Query</h4>
+                                <h4>Dashboard on Tableau from SQL queries</h4>
                             </div>
                             <div class = "card_description">
                                 <p>This was my first data project. I used SQL to query data from a "Toys and models" 
