--- a/30-01-2022.css
+++ b/30-01-2022.css
@@ -46,7 +46,7 @@ nav ul li:hover {
 }
 
 nav {
-	background-color: #ffffff;
+
 }
 
 .page-content {
@@ -59,7 +59,7 @@ nav {
 }
 
 .page-content .projects-section .project .card_title {
-	background-color: #8AAAE5;
+	background-color: #009AE4;
 }
 
 .page-content .projects-section .project h4 {
@@ -75,7 +75,7 @@ nav {
 }
 
 .project_area {
-	background-color: #8AAAE5;
+	background-color: #009AE4;
 }
 
 .project_area p .highlightme{
@@ -89,7 +89,8 @@ nav {
 .project_area p a:link { text-decoration: none; color:#ECECEC ; font-weight:bold; }
 
 footer {
-	background-color: #8AAAE5;
+	background-color: #009AE4;
+	/* background-color: #8AAAE5; */
 }
 /* Colors */
 /* Colors */
@@ -105,7 +106,6 @@ footer {
 /* Navigation Bar */
 
 nav {
-	padding: 0 2%;
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: space-between;
@@ -116,14 +116,14 @@ nav {
 	height: 60px;
 }
 
-nav img {
+nav ul img {
 	width: 42px;
 	height: 42px;
     margin-top: 5px;   
 	border-bottom: 0px solid #A7D9C9;
 }
 
-nav img:hover {
+nav ul img:hover {
 	opacity: 0,3;
 }
 
@@ -140,16 +140,40 @@ nav ul {
 	display: flex;
 	list-style-type: none;
     align-items: center;  
+	padding: 0 2%;
 }
 nav ul li {
 	margin-left: 20px;
 	cursor: pointer;
+	
 }
 
 
 nav ul li:hover {
 	margin-bottom: -3px;
-}  
+} 
+
+nav .profile {
+	padding: 0 2%;
+}
+
+nav .nav_container {
+	position: absolute;
+	text-align: center;
+}
+
+nav .nav_container .profile {
+	position: fixed;
+	top: 8px;
+	left: 0px;
+}
+
+nav .nav_container ul {
+	position: fixed;
+	top: 8px;
+	right: 0px;
+}
+
 
 
 /* Navigation Bar */
@@ -169,11 +193,12 @@ nav ul li:hover {
 /* presentation_area div */
 /* presentation_area div */
 /* presentation_area div */
+
 
 .presentation_area {
 
 	width: 100%;
-	height: 700px;
+	height: 500px;
 	
 }
 
@@ -185,6 +210,21 @@ nav ul li:hover {
 	font-size: 3vw;
 	text-align: center;
 }
+
+
+h5{
+	line-height: 90px;
+	font-family: 'Oswald', sans-serif;
+	text-transform: uppercase;
+	font-size: 3vw;
+	text-align: center;
+	position:sticky;
+	z-index:100;
+	top:0;
+	width: 500px;
+	margin: 0 auto;
+}
+
 
 /* box div */
 /* box div */
@@ -198,6 +238,7 @@ nav ul li:hover {
 	height: 400px;
 	position:relative;
     margin: 0 auto;
+	top: 50px;
 }
 
 .presentation_area .box img{
@@ -253,7 +294,7 @@ nav ul li:hover {
 	font-family: 'Oswald', sans-serif;
 	font-size: 3vw;
 	text-align: center;
-	margin-top: 50px;
+	margin-top: 100px;
 }
 
 .page-content h2 {
