--- a/_includes/nav_bar.html
+++ b/_includes/nav_bar.html
@@ -9,10 +9,10 @@
     </div>
 
     <ul>
-        <li><a href="https://www.linkedin.com/in/b%C3%A9renger-queune/">
+        <li><a href="https://www.linkedin.com/in/b%C3%A9renger-queune/" target="_blank">
             <img src="images/LinkedIn_logo_initials.png" alt="Linkedin Profile" />
         </a></li>
-        <li><a href="https://github.com/BerengerQueune">
+        <li><a href="https://github.com/BerengerQueune" target="_blank">
             <img src="images/github_logo.png" alt="Github Profile" />
         </a></li>
         <li><a href="https://berengerqueune.github.io/index.html#about_me">About me</a></li>
