--- a/_includes/projects_area.html
+++ b/_includes/projects_area.html
@@ -55,7 +55,7 @@
                             <h4>Digitecpharma: dashboards on Metabase</h4>
                         </div>
                         <div class = "card_description">
-                        <p>From a PostgreSQL Database, I use SQL querys to display multiple dashboards on Metabase.</p>
+                        <p>From a PostgreSQL Database, I used SQL queries to display multiple dashboards on Metabase.</p>
                         </div>
 					</div>
 
