--- a/style.css
+++ b/style.css
@@ -79,7 +79,7 @@ nav {
 }
 
 .project_area p .highlightme{
-	color:#AD235E;
+	color:#7c0c3c;
 }
 
 .project_area p a:visited { text-decoration:none; color:#ECECEC ; font-weight:bold; }
