--- a/style.css
+++ b/style.css
@@ -79,7 +79,7 @@ nav {
 }
 
 .project_area p .highlightme{
-	color:#5e2659;
+	color:#832a7b;
 }
 
 .project_area p a:visited { text-decoration:none; color:#ECECEC ; font-weight:bold; }
