--- a/_includes/projects_area.html
+++ b/_includes/projects_area.html
@@ -88,16 +88,68 @@
 				<div class="projects">
 
 					<!--Card 1-->
-                        <div class = "project" onclick="window.open('future_project.html','_self');" style="cursor: pointer;">
-                            <div class = "card_title">
-                                <h4>Future project at Jedha Bootcamp</h4>
-                            </div>
-                            <div class = "card_description">
-                                <p>Wait and See. Wait and See. Wait and See.</p>
-                            </div>
+                    <div class = "project" onclick="window.open('bloc-1.html','_self');" style="cursor: pointer;">
+                        <div class = "card_title">
+                            <h4>Future project at Jedha Bootcamp</h4>
+                        </div>
+                        <div class = "card_description">
+                            <p>Wait and See. Wait and See. Wait and See.</p>
+                        </div>
 					</div>
 
+                    <!--Card 2-->
+                    <div class = "project" onclick="window.open('bloc-2.html','_self');" style="cursor: pointer;">
+                        <div class = "card_title">
+                            <h4>Future project at Jedha Bootcamp</h4>
+                        </div>
+                        <div class = "card_description">
+                            <p>Wait and See. Wait and See. Wait and See.</p>
+                        </div>
+                    </div>
 
+                    <!--Card 3-->
+                    <div class = "project" onclick="window.open('bloc-3.html','_self');" style="cursor: pointer;">
+                        <div class = "card_title">
+                            <h4>Future project at Jedha Bootcamp</h4>
+                        </div>
+                        <div class = "card_description">
+                            <p>Wait and See. Wait and See. Wait and See.</p>
+                        </div>
+                    </div>
+
+				</div>
+
+				<div class="projects">
+
+					<!--Card 4-->
+                    <div class = "project" onclick="window.open('bloc-4.html','_self');" style="cursor: pointer;">
+                        <div class = "card_title">
+                            <h4>Future project at Jedha Bootcamp</h4>
+                        </div>
+                        <div class = "card_description">
+                            <p>Wait and See. Wait and See. Wait and See.</p>
+                        </div>
+					</div>
+
+                    <!--Card 5-->
+                    <div class = "project" onclick="window.open('bloc-5.html','_self');" style="cursor: pointer;">
+                        <div class = "card_title">
+                            <h4>Future project at Jedha Bootcamp</h4>
+                        </div>
+                        <div class = "card_description">
+                            <p>Wait and See. Wait and See. Wait and See.</p>
+                        </div>
+                    </div>
+
+                    <!--Card 6-->
+                    <div class = "project" onclick="window.open('bloc-6.html','_self');" style="cursor: pointer;">
+                        <div class = "card_title">
+                            <h4>Future project at Jedha Bootcamp</h4>
+                        </div>
+                        <div class = "card_description">
+                            <p>Wait and See. Wait and See. Wait and See.</p>
+                        </div>
+                    </div>
 
 				</div>
 			</section>
